# UXR.QuestCamera

./: .editorconfig  README.md  THIRD-PARTY-LICENSES.md  package.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: upm-subtree-split.yml
Documentation/: docfx.json  index.md
Documentation/DocSource/: AdvancedSamples.md  QuickStart.md  V3Migration.md  toc.yml
Editor/Dependencies/: Dependencies.xml
Editor/Scripts/: AssetMenuExtensions.cs
Runtime/: UXR.QuestCamera.Runtime.asmdef  UXR.QuestCamera.asmdef
Runtime/Plugins/Android/: com.uralstech.ucamera-release.aar  com.uralstech.uxr.questcamera-release.aar
Runtime/Scripts/: CameraDevice.cs  CameraInfo.cs  CaptureSession.cs  Enums.cs  OnDemandCaptureSession.cs  QuestCameraManager.cs  StatefulResource.cs  YUVConverter.cs  YUVToRGBAConverter.cs
Runtime/Shaders/: YUVConverter.compute
Samples~/DigitRecognitionSample/: README.md  UXR.QuestCamera.DigitRecognitionSample.asmdef
UCamera/: README.md  settings.gradle.kts
UCamera/UCamera/: build.gradle.kts
UCamera/UCamera/src/main/cpp/: .gitignore  CMakeLists.txt  JNIExtensions.cpp  JNIExtensions.h  Renderer.cpp  Renderer.h  STCaptureSessionHelper.cpp  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp
UCamera/app/: build.gradle.kts  consumer-rules.pro
UCamera/gradle/: libs.versions.toml
UXR.QuestCamera/: .gitignore  UXR.QuestCamera.slnx
UXR.QuestCamera/ProjectSettings/: AndroidResolverDependencies.xml  EditorBuildSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset
(+51 files in other folders)
